# staticcodeanalyzer

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: main.py
src/analysis/: models.py  python_analyzer.py  sql_analyzer.py
src/api/: endpoints.py
src/core/: config.py
src/data/: database.py  models.py  repository.py
src/evaluation/: benchmark.py  metrics.py
src/llm/: client.py  prompts.py
src/visualization/: plots.py
